--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ build/
 debug/
 release/*.txt
 release/*.ini
+release/lastdump
+release/crashes/
 release/crashreporter/
 release/sites/Danbooru (2.0)/danbooru.donmai.us/
 releases/Grabber_*.tar.gz
