Hotfixes for gelbooru

--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -2,3 +2,8 @@
 parameter=false
 method=post
 url=http://gelbooru.com/intermission.php
+
+[General]
+referer=host
+referer_preview=host
+referer_image=host
