Fix multiple login tries and add login settings for gelbooru

--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -1,9 +1,15 @@
 [login]
 parameter=false
 method=post
-url=http://gelbooru.com/intermission.php
+url="http://gelbooru.com/index.php?page=account&s=login&code=00"
+pseudo=user
+password=pass
 
 [General]
 referer=host
 referer_preview=host
 referer_image=host
+
+[download]
+imagesperpage=200
+simultaneous=10
