Fix login on Gelbooru by checking the cookie

--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -1,14 +1,17 @@
+[General]
+name=Gelbooru
+referer=host
+referer_preview=host
+referer_image=host
+ssl=false
+
 [login]
 parameter=false
 method=post
 url="http://gelbooru.com/index.php?page=account&s=login&code=00"
 pseudo=user
 password=pass
-
-[General]
-referer=host
-referer_preview=host
-referer_image=host
+cookie=user_id
 
 [download]
 imagesperpage=200
