Fix SSL for login, tags, and some other cases (fix #368)

--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -8,7 +8,7 @@ ssl=false
 [login]
 parameter=false
 method=post
-url="http://gelbooru.com/index.php?page=account&s=login&code=00"
+url="/index.php?page=account&s=login&code=00"
 pseudo=user
 password=pass
 cookie=user_id
