--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,17 @@ install:
       export PATH
     ; fi
 
-# Install code coverage tool for OS X builds
+# Install code coverage tool for Linux builds
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pip install --user codecov; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install --user codecov; fi
+
+# Start X before running tests on Linux
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        "export DISPLAY=:99.0" &&
+        "sh -e /etc/init.d/xvfb start" &&
+        sleep 3
+    ; fi
 
 # Build Grabber
 script:
@@ -47,4 +55,4 @@ script:
 
 # Upload code coverage of Linux builds
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then codecov -t 068ef4e2-5006-4f45-9545-fbf4e22ad085; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then codecov -t 068ef4e2-5006-4f45-9545-fbf4e22ad085; fi
