--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,8 @@ before_install:
 # Start X before running tests on Linux
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        "export DISPLAY=:99.0" &&
-        "sh -e /etc/init.d/xvfb start" &&
+        export DISPLAY=:99.0 &&
+        sh -e /etc/init.d/xvfb start &&
         sleep 3
     ; fi
 
