--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update &&
+      brew install python3 &&
       brew install qt5 &&
       PATH=/usr/local/Cellar/qt5/5.6.1-1/bin:$PATH &&
       export PATH
