Add venv to OSX python travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,12 @@ addons:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update &&
-      brew install python3 &&
       brew install qt5 &&
       PATH=/usr/local/Cellar/qt5/5.6.1-1/bin:$PATH &&
-      export PATH
+      export PATH &&
+      brew install python3 &&
+      virtualenv venv -p python3 &&
+      source venv/bin/activate
     ; fi
   - pip install --user codecov
 
