Add tests for conditional filenames and custom tokens in filenames

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Grabber
 
-test_settings.ini
-tests/settings.ini
+tests/resources/settings.ini
 tests/resources/thumbs/
 target_wrapper.bat
 symbols/
