--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,9 @@ install:
       brew update &&
       brew install qt5 &&
       PATH=/usr/local/Cellar/qt5/5.6.1-1/bin:$PATH &&
-      export PATH &&
-      brew install python3 &&
-      virtualenv venv -p python3 &&
-      source venv/bin/activate
+      export PATH
     ; fi
-  - pip install --user codecov
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install --user codecov; fi
 
 # Start X before running tests on Linux
 before_script:
@@ -55,4 +52,4 @@ script:
 
 # Upload code coverage
 after_success:
-  - codecov -t 068ef4e2-5006-4f45-9545-fbf4e22ad085
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then codecov -t 068ef4e2-5006-4f45-9545-fbf4e22ad085; fi
