--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 release/sites/*/*/settings.ini
 tests/resources/settings.ini
 tests/resources/thumbs/
+tests/resources/sites/
 target_wrapper.bat
 symbols/
 *.lock
