Add basic test for Image::save

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Grabber
 
 release/sites/*/*/settings.ini
+tests/resources/md5s.txt
 tests/resources/settings.ini
 tests/resources/thumbs/
+tests/resources/tmp/
 tests/resources/sites/
 target_wrapper.bat
 symbols/
