Add option to enable an MD5 search field (fix #599)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 release/sites/*/*/settings.ini
 tests/resources/md5s.txt
 tests/resources/settings.ini
+tests/resources/settings.ini.*
 tests/resources/thumbs/
 tests/resources/tmp/
 tests/resources/sites/
