Use new Profile class everywhere

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ release/sites/*/*/settings.ini
 tests/resources/md5s.txt
 tests/resources/settings.ini
 tests/resources/settings.ini.*
+tests/resources/*.txt
 tests/resources/thumbs/
 tests/resources/tmp/
 tests/resources/sites/
