Move downloader to subfolder and fix page recognition on GB

--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -4,6 +4,7 @@ referer=host
 referer_preview=host
 referer_image=host
 ssl=false
+cookies=@Invalid()
 
 [login]
 parameter=false
@@ -16,3 +17,23 @@ cookie=user_id
 [download]
 imagesperpage=200
 simultaneous=10
+throttle_details=0
+throttle_image=0
+throttle_page=0
+throttle_retry=0
+throttle_thumbnail=0
+
+[ignore]
+always=0
+1=0
+
+[sources]
+usedefault=false
+source_1=regex
+source_2=json
+source_3=regex
+source_4=rss
+
+[auth]
+pseudo=
+password=
