Fix alt pages and Sankaku/Zerochan max page (fix #444, fix #581, fix #602)

--- a/release/sites/Sankaku/chan.sankakucomplex.com/settings.ini
+++ b/release/sites/Sankaku/chan.sankakucomplex.com/settings.ini
@@ -1,7 +1,7 @@
 [General]
-referer=none
-referer_preview=none
-referer_image=none
+referer=page
+referer_preview=page
+referer_image=details
 name=chan.sankakucomplex.com
 ssl=true
 
@@ -12,17 +12,7 @@ source_2=rss
 source_3=json
 source_4=xml
 
-[auth]
-pseudo=
-password=
-
-[login]
-parameter=true
-method=post
-url=
-pseudo=
-password=
-
 [ignore]
 always=0
+alt=4
 1=4
