--- a/release/sites/Sankaku/idol.sankakucomplex.com/settings.ini
+++ b/release/sites/Sankaku/idol.sankakucomplex.com/settings.ini
@@ -14,21 +14,5 @@ source_4=xml
 
 [ignore]
 always=0
+alt=4
 1=4
-
-[auth]
-pseudo=
-password=
-
-[login]
-parameter=true
-method=post
-url=
-pseudo=
-password=
-
-[download]
-throttle_retry=0
-throttle_page=0
-throttle_thumbnail=0
-throttle_details=0
