--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,16 @@ CrashReporter/debug/
 CrashReporter/release/
 
 
+# Visual Studio
+
+.vs/
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+Grabber.VC.*
+
+
 # CLion
 
 .idea/
