--- a/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
+++ b/release/sites/Gelbooru (0.2)/gelbooru.com/settings.ini
@@ -29,11 +29,7 @@ always=0
 
 [sources]
 usedefault=false
-source_1=regex
+source_1=xml
 source_2=json
 source_3=regex
 source_4=rss
-
-[auth]
-pseudo=
-password=
