--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,7 +4,7 @@ codecov:
 coverage:
   precision: 2
   round: down
-  range: "0...100" # 70
+  range: "0...100" # 70...100
 
   status:
     project: true
