--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
     sources:
       - sourceline: 'ppa:ubuntu-sdk-team/ppa'
     packages:
-      - qt5-qmakeexport OUTPUT_FILE="~/Grabber_$TRAVIS_BUILD_NUMBER.app.zip"
+      - qt5-qmake
       - qtbase5-dev
       - qtdeclarative5-dev
       - qtscript5-dev
@@ -58,12 +58,12 @@ script:
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      zip -r Grabber.zip release
-      export OUTPUT_FILE="~/Grabber_$TRAVIS_BUILD_NUMBER.zip"
+      zip -r Grabber.zip release &&
+      OUTPUT_FILE="~/Grabber_$TRAVIS_BUILD_NUMBER.zip"
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      zip -r Grabber.app.zip release/Grabber.app
-      export OUTPUT_FILE="~/Grabber_$TRAVIS_BUILD_NUMBER.app.zip"
+      zip -r Grabber.app.zip release/Grabber.app &&
+      OUTPUT_FILE="~/Grabber_$TRAVIS_BUILD_NUMBER.app.zip"
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
