--- a/.travis.yml
+++ b/.travis.yml
@@ -58,11 +58,16 @@ script:
 # Upload code coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - if [[ "$TRAVIS_TAG" == "" ]]; then
+      export BUILD_LABEL=$TRAVIS_BRANCH
+    ; else
+      export BUILD_LABEL=$TRAVIS_TAG
+    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       cp "gui/build/release/Grabber" release &&
       touch "release/settings.ini" &&
       zip -r Grabber.zip release &&
-      export OUTPUT_FILE="Grabber.$TRAVIS_BRANCH.$TRAVIS_TAG.zip" &&
+      export OUTPUT_FILE="Grabber_$BUILD_LABEL.zip" &&
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
@@ -70,6 +75,6 @@ after_success:
       mv gui/Grabber.app release &&
       mv release/* $release/Grabber.app/Contents/MacOS/ &&
       zip -r Grabber.app.zip release/Grabber.app &&
-      export OUTPUT_FILE="Grabber.$TRAVIS_BRANCH.$TRAVIS_TAG.app.zip" &&
+      export OUTPUT_FILE="Grabber_$BUILD_LABEL.app.zip" &&
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
