--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ after_success:
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
       zip -r Grabber.zip release &&
-      export OUTPUT_FILE="Grabber_$BUILD_LABEL.zip" &&
+      export OUTPUT_FILE="Grabber_${BUILD_LABEL}_linux.zip" &&
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
@@ -72,6 +72,6 @@ after_success:
       mv gui/Grabber.app release &&
       mv release/* $release/Grabber.app/Contents/MacOS/ &&
       zip -r Grabber.app.zip release/Grabber.app &&
-      export OUTPUT_FILE="Grabber_$BUILD_LABEL.app.zip" &&
+      export OUTPUT_FILE="Grabber_${BUILD_LABEL}_mac.app.zip" &&
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
