Fix OSX build release paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,8 @@ after_success:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
-      mv gui/Grabber.app release &&
-      mv release/* $release/Grabber.app/Contents/MacOS/ &&
+      mv build/release/Grabber.app release &&
+      mv release/* release/Grabber.app/Contents/MacOS/ &&
       zip -r Grabber.app.zip release/Grabber.app &&
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_mac.app.zip" &&
       sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
