--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update &&
+      brew install http://git.io/sshpass.rb &&
       brew install qt5 &&
       QT_PATH=$(find /usr/local/Cellar/qt5/* -maxdepth 0 -type d | head -1)
       PATH=$QT_PATH/bin:$PATH &&
@@ -64,14 +65,14 @@ after_success:
       rm "release/CDR.exe" &&
       zip -r Grabber.zip release &&
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_linux.zip" &&
-      sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
+      sshpass -p "$SSH_PASS" scp -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
-      mv build/release/Grabber.app release &&
-      mv release/* release/Grabber.app/Contents/MacOS/ &&
+      mv release/* gui/build/release/Grabber.app/Contents/MacOS/ &&
+      mv gui/build/release/Grabber.app release &&
       zip -r Grabber.app.zip release/Grabber.app &&
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_mac.app.zip" &&
-      sshpass -p "$SSH_PASS" scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
+      sshpass -p "$SSH_PASS" scp -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
