--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ after_success:
       rm "release/CDR.exe" &&
       mv release/* gui/build/release/Grabber.app/Contents/MacOS/ &&
       mv gui/build/release/Grabber.app release &&
-      zip -r Grabber.app.zip release/Grabber.app &&
+      cd release && zip -r ../Grabber.app.zip Grabber.app && cd - &&
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_mac.app.zip" &&
       sshpass -p "$SSH_PASS" scp -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
