--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,16 @@ addons:
   apt:
     sources:
       - sourceline: 'ppa:ubuntu-sdk-team/ppa'
+      - sourceline: 'ppa:beineri/opt-qt571-trusty'
     packages:
       - qt5-qmake
-      - qtbase5-dev
-      - qtdeclarative5-dev
-      - qtscript5-dev
-      - qtmultimedia5-dev
-      - libpulse-dev
       - qt5-default
-      - qttools5-dev-tools
+      - qt57base
+      - qt57declarative
+      - qt57multimedia
+      - qt57script
+      - qt57tools
+      - libpulse-dev
       - sshpass
 
 # Qt packages for OS X
@@ -40,6 +41,7 @@ install:
 # Start X before running tests on Linux
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      source "/opt/qt57/bin/qt57-env.sh" &&
       export DISPLAY=:99.0 &&
       sh -e /etc/init.d/xvfb start &&
       sleep 3
