Allow to keep deleted MD5 in the list (fix #857)

--- a/release/sites/Booru-on-rails/derpibooru.org/settings.ini
+++ b/release/sites/Booru-on-rails/derpibooru.org/settings.ini
@@ -1,3 +1,41 @@
 [General]
 name=Derpibooru
 ssl=true
+referer=none
+referer_preview=
+referer_image=
+cookies=@Invalid()
+headers=@Variant(\0\0\0\b\0\0\0\0)
+
+[ignore]
+always=0
+1=0
+
+[download]
+imagesperpage=200
+simultaneous=10
+throttle_details=0
+throttle_image=0
+throttle_page=0
+throttle_retry=0
+throttle_thumbnail=0
+
+[sources]
+usedefault=true
+source_1=xml
+source_2=json
+source_3=regex
+source_4=rss
+
+[auth]
+pseudo=
+password="HEkmp3xZorgfgyNJzCNq "
+
+[login]
+parameter=true
+method=post
+url=
+pseudo=
+password=
+cookie=
+maxPage=0
