Add metadata to website

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,11 @@
-title:
+title: Imgbrd-Grabber
 subtitle:
-description:
-icon: icon.png
+description: Very customizable imageboard/booru downloader with powerful filenaming features.
+logo: assets/img/icon.png
 show_download: true
 google_analytics:
 theme:
+lang: en_US
+
+gems:
+- jekyll-seo-tag
