Update settings for new login structure and enable SSL on danbooru

--- a/release/sites/Zerochan/www.zerochan.net/settings.ini
+++ b/release/sites/Zerochan/www.zerochan.net/settings.ini
@@ -9,11 +9,10 @@ source_3=xml
 source_4=json
 
 [login]
-parameter=false
-method=post
-url=/login
-pseudo=name
-password=password
-cookie=z_hash
+type=post
+post\url=/login
+post\pseudo=name
+post\password=password
+post\cookie=z_hash
 fields\login=Login
 fields\ref=ref
