--- a/release/sites/Sankaku/chan.sankakucomplex.com/settings.ini
+++ b/release/sites/Sankaku/chan.sankakucomplex.com/settings.ini
@@ -4,7 +4,7 @@ referer_preview=page
 referer_image=none
 name=chan.sankakucomplex.com
 ssl=true
-headers="@Variant(\0\0\0\b\0\0\0\x1\0\0\0\x14\0U\0s\0\x65\0r\0-\0\x41\0g\0\x65\0n\0t\0\0\0\n\0\0\0\x46\0S\0\x43\0\x43\0h\0\x61\0n\0n\0\x65\0l\0\x41\0p\0p\0/\0\x32\0.\0\x30\0.\0\x31\0 \0(\0\x41\0n\0\x64\0r\0o\0i\0\x64\0;\0 \0\x62\0l\0\x61\0\x63\0k\0))"
+headers="@Variant(\0\0\0\b\0\0\0\x2\0\0\0\x14\0U\0s\0\x65\0r\0-\0\x41\0g\0\x65\0n\0t\0\0\0\n\0\0\0\x46\0S\0\x43\0\x43\0h\0\x61\0n\0n\0\x65\0l\0\x41\0p\0p\0/\0\x32\0.\0\x30\0.\0\x31\0 \0(\0\x41\0n\0\x64\0r\0o\0i\0\x64\0;\0 \0\x62\0l\0\x61\0\x63\0k\0)\0\0\0\x1e\0\x41\0\x63\0\x63\0\x65\0p\0t\0-\0L\0\x61\0n\0g\0u\0\x61\0g\0\x65\0\0\0\n\0\0\0\x1c\0\x65\0n\0-\0U\0S\0,\0\x65\0n\0;\0q\0=\0\x30\0.\0\x38)"
 
 [sources]
 usedefault=false
