Change build system from QMake to CMake (fix #838)

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,20 @@ CrashReporter/debug/
 CrashReporter/release/
 
 
+# CMake
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
+
 # Unix
 
 *~
@@ -61,7 +75,6 @@ win32/
 # CLion
 
 .idea/
-CMakeLists.txt
 
 
 # C++ objects and libs
