--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,12 @@ before_script:
 
 # Build Grabber
 script:
-  - qmake Grabber.pro
+  - mkdir build
+  - cd build
+  - cmake ..
   - make
-  - ./tests/build/release/tests
+  - cd ..
+  - ./build/tests/tests
 
 # Upload code coverage
 after_success:
@@ -60,7 +63,7 @@ after_success:
       export BUILD_LABEL=$TRAVIS_TAG
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
-      cp "gui/build/release/Grabber" release &&
+      cp "build/gui/gui" "release/Grabber" &&
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
       zip -r Grabber.zip release &&
@@ -70,8 +73,8 @@ after_success:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
-      mv release/* gui/build/release/Grabber.app/Contents/MacOS/ &&
-      mv gui/build/release/Grabber.app release &&
+      mv release/* build/gui/gui.app/Contents/MacOS/ &&
+      mv build/gui/gui.app release/Grabber.app &&
       cd release && zip -r ../Grabber.app.zip Grabber.app && cd - &&
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_mac.app.zip" &&
       sshpass -p "$SSH_PASS" scp -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.app.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
