--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -12,4 +12,4 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS})
