--- a/.travis.yml
+++ b/.travis.yml
@@ -38,12 +38,16 @@ install:
       export PATH
     ; fi
 
-# Start X before running tests on Linux
 before_script:
+  # Start X before running tests on Linux
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       export DISPLAY=:99.0 &&
       sh -e /etc/init.d/xvfb start &&
       sleep 3
+    ; fi
+  # Set the OpenSSL path on OSX
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      export OPENSSL_ROOT_DIR=/usr/local/opt/openssl/
     ; fi
 
 # Build Grabber
