Update translations with CMake
No more need to use lupdate or lrelease manually. A simple "make
translations" is now enough to update TS files and compile them.

Available targets:
- General_translations
- CrashReporter_translations
- translations (wrapper for the two previous ones)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ add_subdirectory(cli)
 add_subdirectory(tests)
 add_subdirectory(CrashReporter)
 
+add_subdirectory(languages)
+add_custom_target(translations DEPENDS General_translations CrashReporter_translations)
+
 # SSL
 if(USE_SSL)
 	message("Compiling with SSL support")
