--- a/CrashReporter/CMakeLists.txt
+++ b/CrashReporter/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 set(QT_LIBRARIES Qt5::Core Qt5::Gui Qt5::Widgets)
 
-file(GLOB_RECURSE SOURCES "*.cpp")
+file(GLOB_RECURSE SOURCES "*.cpp" "*.ui")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES})
+
+add_subdirectory(languages) # Translations
