Remove command line window appearing with the crash reporter (fix #951)

--- a/CrashReporter/CMakeLists.txt
+++ b/CrashReporter/CMakeLists.txt
@@ -7,7 +7,12 @@ set(QT_LIBRARIES Qt5::Core Qt5::Gui Qt5::Widgets)
 
 file(GLOB_RECURSE SOURCES "*.cpp" "*.ui")
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+if (WIN32)
+	add_executable(${PROJECT_NAME} WIN32 ${SOURCES})
+else()
+	add_executable(${PROJECT_NAME} ${SOURCES})
+endif()
+
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES})
 
 add_subdirectory(languages) # Translations
