Add more info in nightly release description (issue #967)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -55,7 +55,9 @@ deploy:
     artifact: release\Grabber.exe
     description: |
       Nightly automated builds from the develop branch.
-      Automatically uploaded by AppVeyor, use at your own risk!
+      Automatically uploaded by AppVeyor, **use at your own risk**!
+
+      *Note: you need to first install Grabber normally before using nightly releases.*
     auth_token:
       secure: mUYQ72KBJUaYr5Bhy2HkBkEY13Q7k27Q7IRmOGXfTOq7YnXUS9PikETcZvzCfiVu
     on:
