--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,6 +57,9 @@ deploy:
       Nightly automated builds from the develop branch.
       Automatically uploaded by AppVeyor, **use at your own risk**!
 
+      **Head:** $(APPVEYOR_REPO_COMMIT)
+      **Date:** $(APPVEYOR_REPO_COMMIT_TIMESTAMP)
+
       *Note: you need to first install Grabber normally before using nightly releases. Then, replace the existing `Grabber.exe` file in your installation folder by this one.*
     auth_token:
       secure: mUYQ72KBJUaYr5Bhy2HkBkEY13Q7k27Q7IRmOGXfTOq7YnXUS9PikETcZvzCfiVu
