fix cmake install locations for linux

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -8,5 +8,6 @@ set(QT_LIBRARIES Qt5::Core)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/" "../lib/src/" "..")
 
-add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} lib)
+add_executable("Grabber-cli" ${SOURCES})
+target_link_libraries("Grabber-cli" ${QT_LIBRARIES} lib)
+install(TARGETS "Grabber-cli" RUNTIME DESTINATION bin)
