Remove ${CMAKE_INSTALL_PREFIX} and refactor renaming of binaries

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -8,6 +8,7 @@ set(QT_LIBRARIES Qt5::Core)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/" "../lib/src/" "..")
 
-add_executable("Grabber-cli" ${SOURCES})
-target_link_libraries("Grabber-cli" ${QT_LIBRARIES} lib)
-install(TARGETS "Grabber-cli" RUNTIME DESTINATION bin)
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} lib)
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Grabber-cli")
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
