--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -96,10 +96,11 @@ if(USE_BREAKPAD)
 endif()
 
 if (WIN32)
-	add_executable("Grabber" WIN32 ${SOURCES} ${FORMS} ${UTILS_SOURCES})
+	add_executable(${PROJECT_NAME} WIN32 ${SOURCES} ${FORMS} ${UTILS_SOURCES})
 else()
-	add_executable("Grabber" ${SOURCES} ${FORMS} ${UTILS_SOURCES})
+	add_executable(${PROJECT_NAME} ${SOURCES} ${FORMS} ${UTILS_SOURCES})
 endif()
 
-target_link_libraries("Grabber" ${QT_LIBRARIES} ${LIBS} lib)
-install(TARGETS "Grabber" RUNTIME DESTINATION bin)
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS} lib)
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Grabber")
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
