Add Grabber version to e621 user-agent (issue #995)

--- a/release/sites/Danbooru/e621.net/settings.ini
+++ b/release/sites/Danbooru/e621.net/settings.ini
@@ -1,6 +1,7 @@
 [General]
 name=e621
 ssl=true
+headers="@Variant(\0\0\0\b\0\0\0\x1\0\0\0\x14\0U\0s\0\x65\0r\0-\0\x41\0g\0\x65\0n\0t\0\0\0\n\0\0\0\xc0\0M\0o\0z\0i\0l\0l\0\x61\0/\0\x35\0.\0\x30\0 \0(\0W\0i\0n\0\x64\0o\0w\0s\0 \0N\0T\0 \0\x31\0\x30\0.\0\x30\0;\0 \0W\0i\0n\0\x36\0\x34\0;\0 \0x\0\x36\0\x34\0;\0 \0r\0v\0:\0\x35\0\x32\0.\0\x30\0)\0 \0G\0\x65\0\x63\0k\0o\0/\0\x32\0\x30\0\x31\0\x30\0\x30\0\x31\0\x30\0\x31\0 \0\x46\0i\0r\0\x65\0\x66\0o\0x\0/\0\x35\0\x32\0.\0\x30\0 \0G\0r\0\x61\0\x62\0\x62\0\x65\0r\0/\0%\0v\0\x65\0r\0s\0i\0o\0n\0%)"
 
 [download]
 imagesperpage=320
