--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.qm
 release/sites/*/*/settings.ini
 release/sites/*/*/tags.txt
+release/sites/*/*/tags.db
 tests/resources/md5s.txt
 tests/resources/settings.ini
 tests/resources/settings.ini.*
