Add support for Anime-pictures login (issue #1051)

--- a/release/sites/Anime pictures/anime-pictures.net/defaults.ini
+++ b/release/sites/Anime pictures/anime-pictures.net/defaults.ini
@@ -7,3 +7,10 @@ source_1=json
 source_2=regex
 source_3=
 source_4=
+
+[login]
+type=post
+post\url=/login/submit
+post\pseudo=login
+post\password=password
+post\cookie=asian_server
