--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
       - qtbase5-dev
       - qtscript5-dev
       - qtmultimedia5-dev
+      - qttools5-dev
       - qttools5-dev-tools
       - sshpass
       - lcov
