Add Travis package for QML

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
       - sqlite3
       - libqt5sql5-sqlite
       - qtbase5-dev
-      - qtscript5-dev
+      - qtdeclarative5-dev
       - qtmultimedia5-dev
       - qttools5-dev
       - qttools5-dev-tools
