Exclude e2e from main build target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ add_subdirectory(lib)
 add_subdirectory(gui)
 add_subdirectory(cli)
 add_subdirectory(tests)
-add_subdirectory(e2e)
+add_subdirectory(e2e EXCLUDE_FROM_ALL)
 add_subdirectory(CrashReporter)
 
 add_subdirectory(languages)
