--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 *.qm
 e2e/viewer/result.json
+release/sites/*/model.js
 release/sites/*/*/settings.ini
 release/sites/*/*/tags.txt
 release/sites/*/*/tags.db
@@ -48,6 +49,11 @@ releases/release.sh
 releases/translation_tools.rar
 CrashReporter/debug/
 CrashReporter/release/
+
+
+# NPM
+
+node_modules/
 
 
 # CMake
